--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                   <span>2018</span>
                 </div>
                 <div class="timeline-info">
-                  <h3><span>Adobephotoshop and premere Pro</span><small>adobe tools expert</small></h3>
+                  <h3><span>Adobephotoshop and Premiere Pro</span><small>adobe tools expert</small></h3>
                   <p><a rel="nofollow" href="https://www.facebook.com/tooplate"></a> I learned to Retouch and enhance
                     photographs, adjusted colors, and designed intricate visuals in photoshop and Gained expertise in
                     video editing and post-production throught the premere pro.
